--- a/appz.yml
+++ b/appz.yml
@@ -25,4 +25,9 @@ volumes:
   mode: ReadWriteOnce
   
 properties:
+  DB_USER_ADMIN: admin
+  DB_USER_ADMIN_PASSWORD:
+     vault: DB_USER_ADMIN_PASSWORD
+  MONGO_MBK_PASSWORD:
+     vault: MONGOUSER1_PASSWORD
   revision : 04
