--- a/appz.yml
+++ b/appz.yml
@@ -28,6 +28,6 @@ properties:
   DB_USER_ADMIN: admin
   DB_USER_ADMIN_PASSWORD:
      vault: DB_USER_ADMIN_PASSWORD
-  MONGO_MBK_PASSWORD:
+  MONGO_USER1_PASSWORD:
      vault: MONGOUSER1_PASSWORD
   revision : 05
