--- a/setup.yaml
+++ b/setup.yaml
@@ -1,8 +1,8 @@
-users:
-  - name: jagdish
-    password: $MONGOUSER1_PASSWORD
+#users:
+#  - name: jagdish
+#    password: $MONGOUSER1_PASSWORD
   
-acl:
-  - database: test
-    user: jagdish
-    access: dbOwner
+#acl:
+#  - database: test
+#    user: jagdish
+#    access: dbOwner
